--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,8 +48,8 @@ import Layout from '../components/layout.astro';
 </style>
 
 <Layout
-  title="Netlify Feature Tour"
-  description="This is a small site to show the most powerful features of Netlify quickly!"
+  title="Primera pagina de EnglishTime"
+  description="This is a small step for Adri and Will, and a huge step for their dreams!"
   home
 >
   <main class="steps">
